--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGODB_URL = mongodb://127.0.0.1:27017/email-marketing-app
+REACT_APP_ACCOUNT_TOKEN = 581812a7-ed99-4ba1-95eb-8c4362dae7a7
+REACT_APP_SECRET_KEY = a82ccf04def15f3b3bf97877efd163fd
