--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "express": "^4.17.1",
         "mongoose": "^5.13.4",
         "morgan": "^1.10.0",
-        "nanoid": "^3.1.23"
+        "nanoid": "^3.1.23",
+        "node-fetch": "^3.0.0"
     }
 }
